# exacam

./: .gitignore  README.md
circuits/: .gitignore
circuits/prototype/: exacam-proto.pro  exacam-proto.sch
firmware/: .gitignore  Makefile  config.h  dscr.a51  main.c  sccb.c  sccb.h  usbjtag.c
firmware/fx2/: Makefile  delay.c  fx2.mk  fx2regs.h
host/: CMakeLists.txt  main.cpp  post.cpp
